--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ NEXT_PUBLIC_ENV=DEVELOPMENT
 # NEXT_PUBLIC_ENV=PRODUCTION
 NEXT_PUBLIC_STRIPE_PUBLIC_KEY_LIVE=pk_live_hCNOPKYsT2iAdHVXD6XLPmYD
 NEXT_PUBLIC_STRIPE_PUBLIC_KEY_TEST=pk_test_O0tvaykjxmHJ8denijFUBbPy
+NEXT_PUBLIC_EMAILJS_SERVICE_ID=service_h72x89h
+NEXT_PUBLIC_EMAILJS_TEMPLATE_ID=template_gb1plle
+NEXT_PUBLIC_EMAILJS_USER_ID=asyaU-zjH2kU8ysKD
