--- a/.env
+++ b/.env
@@ -4,4 +4,6 @@ NEXT_PUBLIC_STRIPE_PUBLIC_KEY_LIVE=pk_live_hCNOPKYsT2iAdHVXD6XLPmYD
 NEXT_PUBLIC_STRIPE_PUBLIC_KEY_TEST=pk_test_O0tvaykjxmHJ8denijFUBbPy
 NEXT_PUBLIC_EMAILJS_SERVICE_ID=service_2fgc46x
 NEXT_PUBLIC_EMAILJS_TEMPLATE_ID=template_j3u12se
+NEXT_PUBLIC_EMAILJS_TEMPLATE_ID_2=template_4tllpvn
+
 NEXT_PUBLIC_EMAILJS_USER_ID=q8oLi7FKvvG8B4Rbc
